# llm-feature-extractor

./: .gitignore  Dockerfile  README.md  data.csv  pyproject.toml  synthetic_dataset.py  t.py  t2.py  template.py  text.txt  train_clf.csv  train_clf.txt
irap_dataset/: feature_extraction.py
llm-feature-extractor/: __init__.py  config.py  dataset.py  prompted.py  text_to_csv.py  types.py  utils.py
llm_feature_extractor/: csv_to_text.py  df_text_to_csv.py  prompt_generator.py  text_to_csv.py
restaurant_dataset/: bert_fine_tune.py  csv_to_text.py  prep_train_clf_csv.py
restaurant_dataset/explain/: explain_captum.py  explain_input_times_gradient.py  explain_lime.py  explain_shap.py  explain_shap_xgboost.py  explain_tsne.py
tests/: test_fine_tuned.py  test_prompted.py
